# agent_parallelization

./: .env.example  .gitignore  NEXT_REVIEWER_START_HERE.md  PILOT_EXPERIMENT_PROTOCOL.md  README.md  pyproject.toml  run_tasks.sh  run_theory_formalization_tasks.sh
ai_task_passes/: README.md  run_pass_02_theory_formalization.sh
ai_task_passes/pass_01_bp_implementation/: task_00.md  task_01.md  task_04.md  task_05.md  task_08.md  task_09.md
ai_task_passes/pass_02_theory_formalization/: PROMPT_FOR_CODEX.md  README.md  task_00_orientation.md  task_01_theorem_refactor.md  task_03_modes_and_estimators.md  task_04_targeted_experiments.md  task_06_finalize_bundle.md
archives/: README.md
autoresearch/: README.md  prepare.py  program.md  train.py
configs/: README.md  agent_default.json  experiment.yaml  experiment_cifar10.yaml  experiment_d00.yaml  experiment_d01.yaml  experiment_d10.yaml  experiment_d11.yaml  experiment_default.json
configs/imported_swarms/: experiment_imported_swarm.yaml
docs/: baseline_headroom_calibration.md  baseline_headroom_experiment_summary.md  baseline_refinement_baselines.json  baseline_refinement_edits.json  merge_protocol.md  parallel_capacity.md  reviewer_grade_fixed_step_template.yaml  reviewer_grade_protocol.md
docs/guides/: IMPLEMENTATION_GUIDE.md  PILOT_EXPERIMENT_PROTOCOL.md
passes/pass_04__bp-4term-probing__active/: imported_swarms_integration.md
passes/pass_05__baseline-headroom-calibration__active/: README.md
results/: README.md
results/figures/: README.md
runs/experiment_exp_20260411_190921/: config.json
runs/experiment_exp_20260411_192153/: config.json
runs/experiment_exp_20260411_193509/: config.json
runs/experiment_exp_20260411_194044/: config.json
runs/experiment_exp_20260411_194616/: config.json
runs/experiment_exp_20260411_195625/: config.json
runs/experiment_exp_20260411_200635/: config.json
runs/experiment_exp_20260411_201635/: config.json  shared_results_log.jsonl
runs/experiment_pilot_d00_rep1/: config.json
runs/experiment_pilot_d00_rep2/: config.json
runs/experiment_pilot_d00_rep3/: config.json
runs/experiment_pilot_d01_rep1/: config.json
scripts/: analyze_runs.py  benchmark_parallel_capacity.py  compute_decomposition.py  label_modes.py  run_merge_phase.py  run_parallel_experiment.py  run_single_long_experiment.py
tasks/: task_00.md  task_01.md  task_02.md  task_03.md  task_06.md  task_07.md
templates/: agent_first_message.md  agent_system_prompt.md
tests/: conftest.py  test_baseline_calibration.py  test_budget_enforcement.py  test_capacity_benchmark.py  test_certified_time.py  test_collector.py  test_compatibility_adapter.py  test_imported_swarms_shared_memory.py  test_log_parser.py  test_merger.py  test_reasoning_trace.py  test_snapshotting.py  test_workspace_isolation.py
theory_formalization_tasks/: PROMPT_FOR_CODEX.md  README.md  task_01_theorem_refactor.md  task_02_protocol_and_logging.md  task_03_modes_and_estimators.md  task_05_reanalysis_and_verdict.md  task_06_finalize_bundle.md
workflow/: README.md
(+451 files in other folders)
