[project]
name = "agent-parallelization-new"
version = "0.1.0"
description = "Parallel agent experiment framework using Claude Code sub-agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyyaml>=6.0",
    "tabulate>=0.10.0",
]

[project.scripts]
run-parallel = "agent_parallelization_new.launcher:main_parallel"
run-single-long = "agent_parallelization_new.launcher:main_single_long"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_parallelization_new"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

# Note: requires Python >=3.10. On this system use:
#   ~/miniforge3/bin/python3.13 -m pytest tests/ -v
